# emv-tools

./: .gitignore  .travis.yml  Makefile-gcov  Makefile.am  README.md  configure.ac
data/: Makefile.am  amex.keys  capk.txt  config.txt.in  mastercard-test.keys  mastercard.keys  notinst.txt.in  visa-test.keys  visa.keys
emu/: Makefile.am  dump.c  dump.h  emu_ast.c  emu_ast.h  emu_glue.h  emu_lex.l  emu_main.c  emu_syntax.y
lib/: Makefile.am  capk.c  config.c  dol.c  dump.c  emv_commands.c  emv_pk.c  emv_pki.c  emv_pki_priv.c  emv_tags.c  openemv.pc.in  pinpad.c  tlv.c
lib/crypto/: Makefile.am  crypto.c  crypto_backend.h  crypto_gcrypt.c  crypto_libgcrypt.c  crypto_nettle.c
lib/emu/: Makefile.am  emu_ast.c  emu_commands.c  emu_lex.l  emu_syntax.y
lib/include/: Makefile.am
lib/include/openemv/: config.h  crypto.h  dol.h  emu_ast.h  emu_glue.h  emv_commands.h  emv_pk.h  emv_pki.h  emv_pki_priv.h  emv_tags.h  pinpad.h  sc_helpers.h  scard.h  tlv.h
lib/m4/: openemv_flags.m4  openemv_module.m4
lib/scard/: Makefile.am  sc_helpers.c  scard.c  scard_apduio_t0.c  scard_apduio_t1.c  scard_backend.h  scard_emu.c  scard_pcsc.c
m4/: openemv_module.m4
src/: Makefile  Makefile.am  capk-test.c  capk-verify.c  capk.c  capk.h  capk.txt  crypto_backend.h  crypto_gcrypt.c  dol.c  dol.h  emu_test.c  emv_cap.c  emv_cl_cda.c  emv_dda.c  emv_dump.c  emv_dump_emu.c  emv_pki.c  emv_pki.h  emv_ppse.c  emv_pse.c  emv_sda.c  emv_select.c  emv_tags.c  emv_tags.h  maestro.emu  main.c  pcsc2.c  pcsc3.c  sc_helpers.c  sc_helpers.h  scard.c  scard.h  sda-test.c  tlv-test.c  tlv.c  tlv.h  tlvs.c  tlvs.h
test/: Makefile.am  capk-verify.c  cda-test.c  crypto-test.c  dda-test.c  emu_test.c  emv_pki_priv_test.c  sda-test.c  tlv-test.c
