nobase_include_HEADERS = \
	openemv/config.h \
	openemv/crypto.h \
	openemv/dol.h \
	openemv/dump.h \
	openemv/emu_ast.h \
	openemv/emu_glue.h \
	openemv/emv_commands.h \
	openemv/emv_pk.h \
	openemv/emv_pki.h \
	openemv/emv_tags.h \
	openemv/pinpad.h \
	openemv/sc_helpers.h \
	openemv/scard.h \
	openemv/tlv.h
